--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
     "browser": true,
     "es6": true
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
   "globals": {
     "$": false,
     "jQuery": false
@@ -33,6 +36,10 @@
     ],
     "no-unused-vars": [
       "warn"
-    ]
+    ],
+    "prettier/prettier": ["error", {
+      "singleQuote": true,
+      "printWidth": 80
+    }]
   }
 }
