--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,6 @@
 {
+  "plugins": ["stylelint-prettier"],
+  "extends": ["stylelint-prettier/recommended"],
   "rules": {
     "string-quotes": "double",
     "selector-pseudo-element-colon-notation": "double",
