:rotating_light: Test: テスト駆動マークアップ用スタイルシートの追加

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,7 @@
 {
   "plugins": ["stylelint-prettier"],
   "extends": ["stylelint-prettier/recommended"],
+  "ignoreFiles": "src/_sass/css/_partials/_test.scss",
   "rules": {
     "string-quotes": "double",
     "selector-pseudo-element-colon-notation": "double",
