:tada: Add: rollup.js の追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,9 @@
     "$": false,
     "jQuery": false
   },
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "rules": {
     "indent": [
       "error",
