--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "autoprefixer": "^9.4.2",
     "browser-sync": "^2.26.3",
     "css-declaration-sorter": "^4.0.1",
-    "csswring": "^7.0.0",
+    "cssnano": "^4.1.10",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.0",
     "gulp": "^4.0.0",
