:rotating_light: Test: 空の宣言ブロックを警告する

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,6 +7,7 @@
     "selector-pseudo-element-colon-notation": "double",
     "color-hex-length": "short",
     "number-leading-zero": "always",
-    "comment-empty-line-before": "always"
+    "comment-empty-line-before": "always",
+    "block-no-empty": true
   }
 }
