--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
-    "autoprefixer": "^9.4.2",
+    "autoprefixer": "^9.6.0",
     "browser-sync": "^2.26.3",
     "css-declaration-sorter": "^4.0.1",
     "cssnano": "^4.1.10",
@@ -62,10 +62,9 @@
   },
   "browserslist": [
     "last 2 versions",
-    "ie >= 9",
-    "safari >= 9",
-    "ios >= 9.2",
-    "android >= 4.4.2"
+    "ie >= 11",
+    "android >= 4.4.4",
+    "not dead"
   ],
   "dependencies": {
     "@babel/polyfill": "^7.2.5"
