--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-data": "^1.3.1",
-    "gulp-ejs": "^3.3.0",
+    "gulp-ejs": "^4.1.0",
     "gulp-eslint": "^5.0.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.0.9",
     "gulp-sass-variables": "^1.2.0",
