--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,9 @@
     "no-unused-vars": [
       "warn"
     ],
+    "no-irregular-whitespace": [
+      "error", { "skipRegExps": true }
+    ],
     "prettier/prettier": ["error", {
       "singleQuote": true,
       "printWidth": 80
