--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "build": "npm run format:css & npm run format:js && NODE_ENV=production gulp && npm run bundle:build && npm run format:html",
     "format:html": "prettier --write 'htdocs/**/*.html'",
     "format:css": "stylelint --fix 'src/**/*.scss'",
-    "format:js": "eslint --fix 'src/**/*.js'",
+    "format:js": "eslint --fix 'src/**/*.ts'",
     "e2e": "jest test/e2e/snapshot.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "autoprefixer": "^9.6.0",
     "browser-sync": "^2.26.3",
     "css-declaration-sorter": "^4.0.1",
     "cssnano": "^4.1.10",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
     "gulp-data": "^1.3.1",
     "gulp-ejs": "^4.1.0",
-    "gulp-eslint": "^5.0.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.0.9",
     "gulp-sass-variables": "^1.2.0",
+    "gulp-typescript": "^5.0.1",
     "jest": "^24.7.1",
     "jest-image-snapshot": "^2.8.1",
     "jest-puppeteer": "^4.1.1",
@@ -53,6 +53,7 @@
     "stylelint": "^9.9.0",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-prettier": "^1.0.5",
+    "typescript": "^3.5.3",
     "vuepress": "^1.0.0-alpha.31"
   },
   "jest": {
