:shirt: Style: プロパティの値が「0」に対する単位を許可しないルールの追加

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -9,6 +9,7 @@
     "number-leading-zero": "always",
     "comment-empty-line-before": "always",
     "block-no-empty": true,
+    "length-zero-no-unit": true,
     "rule-empty-line-before": [
       "always-multi-line",
       {
