--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@rollup/plugin-typescript": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "autoprefixer": "^9.7.3",
@@ -28,6 +32,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-data": "^1.3.1",
     "gulp-ejs": "^4.1.0",
     "gulp-eslint": "^6.0.0",
