--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs"
+    "target": "esnext",
+    "moduleResolution": "node"
   }
 }
