:sparkles: Add: cross-env の追加、Windows 用に環境変数の設定変更

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "docs:dev": "vuepress dev src/_docs",
     "docs:build": "vuepress build src/_docs",
-    "bundle:dev": "NODE_ENV=development rollup -c -w",
-    "bundle:build": "NODE_ENV=production rollup -c",
-    "dev": "NODE_ENV=development gulp dev & npm run bundle:dev",
-    "build": "npm run format:css & npm run format:js && NODE_ENV=production gulp && npm run bundle:build && npm run format:html",
+    "bundle:dev": "cross-env NODE_ENV=development rollup -c -w",
+    "bundle:build": "cross-env NODE_ENV=production rollup -c",
+    "dev": "cross-env NODE_ENV=development gulp dev & npm run bundle:dev",
+    "build": "npm run format:css & npm run format:js && cross-env NODE_ENV=production gulp && npm run bundle:build && npm run format:html",
     "format:html": "prettier --write 'htdocs/**/*.html'",
     "format:css": "stylelint --fix 'src/**/*.scss'",
     "format:js": "eslint --fix 'src/**/*.ts'",
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^2.0.0",
     "autoprefixer": "^9.7.3",
     "browser-sync": "^2.26.3",
+    "cross-env": "^7.0.0",
     "css-declaration-sorter": "^4.0.1",
     "cssnano": "^4.1.10",
     "eslint-config-prettier": "^6.0.0",
