--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-prettier": "^1.0.5",
     "typescript": "^3.5.3",
-    "vuepress": "^1.0.0-alpha.31"
+    "vuepress": "^1.4.1"
   },
   "jest": {
     "preset": "jest-puppeteer",
