--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^7.0.0",
     "css-declaration-sorter": "^4.0.1",
     "cssnano": "^4.1.10",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "gulp": "^4.0.0",
