--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rollup": "^2.1.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^4.0.4",
     "sass": "^1.25.0",
     "sass-loader": "^7.1.0",
