--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "@rollup/plugin-typescript": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
@@ -55,7 +56,6 @@
     "puppeteer": "^3.0.0",
     "rollup": "^2.1.0",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^4.0.4",
     "sass": "^1.25.0",
