:truck: Rename: 開発用ディレクトリのリネーム（#30）

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vuepress dev src/_docs",
-    "docs:build": "vuepress build src/_docs",
+    "docs:dev": "vuepress dev src/docs",
+    "docs:build": "vuepress build src/docs",
     "bundle:dev": "cross-env NODE_ENV=development rollup -c -w",
     "bundle:build": "cross-env NODE_ENV=production rollup -c",
     "dev": "cross-env NODE_ENV=development gulp dev & npm run bundle:dev",
     "build": "npm run format:css & npm run format:js && cross-env NODE_ENV=production gulp && npm run bundle:build && npm run format:html",
     "format:html": "prettier --write 'htdocs/**/*.html'",
-    "format:css": "stylelint --fix 'src/**/*.scss'",
-    "format:js": "eslint --fix 'src/**/*.ts'",
+    "format:css": "stylelint --fix 'src/sass/css/**/*.scss'",
+    "format:js": "eslint --fix 'src/ts/js/**/*.ts'",
     "e2e": "jest test/e2e/snapshot.test.js"
   },
   "keywords": [],
