:wrench: Chore: 厳格型チェックの TypeScript の設定

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,6 @@
     "target": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "strictFunctionTypes": false,
-    "strictBindCallApply": false,
-    "strictPropertyInitialization": false,
-    "noImplicitThis": false
+    "strict": true
   }
 }
