--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,13 @@
     "no-irregular-whitespace": [
       "error", { "skipRegExps": true }
     ],
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "TSEnumDeclaration",
+        "message": "Don't declare enums"
+      }
+    ],
     "prettier/prettier": ["error", {
       "singleQuote": true,
       "printWidth": 80
