--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "sass-loader": "^7.1.0",
     "stylelint": "^13.7.0",
     "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.0.5",
     "typescript": "^4.0.2",
     "vuepress": "^1.4.1"
@@ -78,8 +80,6 @@
     "not dead"
   ],
   "dependencies": {
-    "core-js": "3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-order": "^4.1.0"
+    "core-js": "3"
   }
 }
