--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run format:css & npm run format:js && cross-env NODE_ENV=production gulp && npm run bundle:build && npm run format:html",
     "format:html": "prettier --write 'htdocs/**/*.html'",
     "format:css": "stylelint --fix 'src/sass/css/**/*.scss'",
-    "format:js": "eslint --fix 'src/ts/js/**/*.ts'",
+    "format:js": "prettier-eslint --write $PWD/'src/ts/js/**/*.ts'",
     "e2e": "jest test/e2e/snapshot.test.js"
   },
   "keywords": [],
@@ -33,8 +33,6 @@
     "css-declaration-sorter": "^5.1.2",
     "cssnano": "^4.1.10",
     "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-data": "^1.3.1",
@@ -52,6 +50,7 @@
     "postcss-reporter": "^6.0.0",
     "postcss-scss": "^2.1.1",
     "prettier": "^2.1.1",
+    "prettier-eslint-cli": "^5.0.0",
     "puppeteer": "^5.2.1",
     "rollup": "^2.26.9",
     "rollup-plugin-babel": "^4.3.3",
