--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^26.4.2",
     "jest-image-snapshot": "^4.2.0",
     "jest-puppeteer": "^4.1.1",
+    "postcss": "^8.2.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-reporter": "^7.0.2",
     "postcss-scss": "^3.0.4",
