--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-sass-variables": "^1.2.0",
     "gulp-typescript": "^5.0.1",
+    "husky": "^4.3.5",
     "jest": "^26.4.2",
     "jest-image-snapshot": "^4.2.0",
     "jest-puppeteer": "^4.1.1",
