--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jest": "^26.4.2",
     "jest-image-snapshot": "^4.2.0",
     "jest-puppeteer": "^4.1.1",
+    "lint-staged": "^10.5.3",
     "postcss": "^8.2.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-reporter": "^7.0.2",
@@ -80,8 +81,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format:css & npm run format:js"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.html": "prettier --write",
+    "*.scss": "stylelint --fix",
+    "*.ts": "eslint --fix"
   },
   "browserslist": [
     "last 2 versions",
