--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "node": "12.x"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.10.4",
     "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
-    "autoprefixer": "^10.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "autoprefixer": "^10.2.1",
     "browser-sync": "^2.26.12",
     "cross-env": "^7.0.0",
     "css-declaration-sorter": "^6.0.2",
     "cssnano": "^4.1.10",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-data": "^1.3.1",
@@ -48,30 +48,30 @@
     "gulp-sass": "^4.1.0",
     "gulp-sass-variables": "^1.2.0",
     "gulp-typescript": "^5.0.1",
-    "husky": "^4.3.5",
+    "husky": "^4.3.8",
     "jest": "^26.4.2",
-    "jest-image-snapshot": "^4.2.0",
+    "jest-image-snapshot": "^4.3.0",
     "jest-puppeteer": "^4.1.1",
     "lint-staged": "^10.5.3",
-    "postcss": "^8.2.1",
+    "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-reporter": "^7.0.2",
     "postcss-scss": "^3.0.4",
     "prettier": "^2.1.1",
     "puppeteer": "^5.2.1",
-    "rollup": "^2.26.9",
+    "rollup": "^2.36.2",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-terser": "^7.0.1",
-    "sass": "^1.26.10",
-    "sass-loader": "^10.0.2",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "stylelint": "^13.7.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.0.5",
     "typescript": "^4.1.3",
-    "vuepress": "^1.5.4"
+    "vuepress": "^1.8.0"
   },
   "jest": {
     "preset": "jest-puppeteer",
@@ -96,6 +96,6 @@
     "not dead"
   ],
   "dependencies": {
-    "core-js": "3"
+    "core-js": "^3.8.2"
   }
 }
