:truck: Chore: Website Boilerplate → Web Booster Pack へのリネーム

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "website-boilerplate",
+  "name": "web-booster-pack",
   "version": "4.0.0",
   "description": "",
   "main": "index.js",
