--- a/package.json
+++ b/package.json
@@ -29,6 +29,25 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@types/babel__core": "^7.1.15",
+    "@types/babel__preset-env": "^7.9.2",
+    "@types/browser-sync": "^3001.0.28-alpha",
+    "@types/core-js": "^2.5.5",
+    "@types/cssnano": "^4.0.1",
+    "@types/eslint": "^7.28.0",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/gulp": "^4.0.9",
+    "@types/gulp-babel": "^6.1.30",
+    "@types/gulp-postcss": "^8.0.1",
+    "@types/gulp-rename": "^2.0.1",
+    "@types/gulp-sass": "^5.0.0",
+    "@types/gulp-sass-variables": "^1.2.1",
+    "@types/jest-image-snapshot": "^4.3.1",
+    "@types/postcss-reporter": "^7.0.1",
+    "@types/prettier": "^2.3.2",
+    "@types/puppeteer": "^5.4.4",
+    "@types/sass": "^1.16.1",
+    "@types/stylelint": "^13.13.1",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "autoprefixer": "^10.2.1",
